fixes #3065, refs #3011 initial version of multiple dashboard feature refs #2857 fixed id collisions in modal confirm windows by using an role attribute instead of id
git-svn-id: http://dev.piwik.org/svn/trunk@6142 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -387,3 +387,12 @@ div.widgetpreview-preview {
 .widgetPlaceholder {
     border: 1px dashed #bbb6ad;
 }
+
+#newDashboardName, #createDashboardName {
+    width: 200px;
+}
+
+#newDashboardNameInput, #createDashboardNameInput {
+    margin: 10px 0 0 0;
+    text-align: center;
+}
