refs #3011 small adjustments to create dashboard confirm
git-svn-id: http://dev.piwik.org/svn/trunk@6152 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -102,8 +102,8 @@
 	display: none;
 	width:630px;
 	background:#fff;
-	color: #7A0101;
-	cursor: wait;
+	color: #444;
+	cursor: default;
 	font-size: 12px!important;
 	font-family:Arial,Verdana,Arial,Helvetica,sans-serif;
 	border-radius:4px;
@@ -395,4 +395,8 @@ div.widgetpreview-preview {
 #newDashboardNameInput, #createDashboardNameInput {
     margin: 10px 0 0 0;
     text-align: center;
+}
+
+#createDashboardNameInput input {
+    margin-bottom: 10px;
 }
