--- a/themes/default/styles.css
+++ b/themes/default/styles.css
@@ -37,7 +37,7 @@ code {
 	direction:ltr;
 	display:table;
 	font-size:100%;
-	margin:12px 2px 0px;
+	margin:12px 2px 0;
 	padding:5px 50px 5px 15px;
 	text-align:left;
 	line-height:1.3em;
