--- a/plugins/CoreAdminHome/templates/menu.css
+++ b/plugins/CoreAdminHome/templates/menu.css
@@ -7,7 +7,7 @@
 	margin-left: 0;
 	margin-bottom: 0;
 	margin-top: 0.1em;
-	border-bottom: 1px solid gray;
+	border-bottom: 1px solid #808080;
 }
 
 #tablist li {
@@ -28,16 +28,16 @@
 }
 
 #tablist li a:link,#tablist li a:visited {
-	color: black;
+	color: #000;
 	border-radius: 4px 4px 0 0;
 	-moz-border-radius:4px 4px 0 0;
 	-webkit-border-radius:4px 4px 0 0;
 }
 
 #tablist li a:hover, #tablist li a.active {
-	color: black;
+	color: #000;
 	background: #defdbb;
-	border-color: black;
+	border-color: #000;
 }
 
 #tablist li a.current {
