--- a/plugins/Live/templates/live.css
+++ b/plugins/Live/templates/live.css
@@ -1,7 +1,7 @@
 #visitsLive {
    text-align:left;
    font-size:90%;
-   color:#444444;
+   color:#444;
 }
 #visitsLive .datetime, #visitsLive .country, #visitsLive .referer, #visitsLive .settings, #visitsLive .returning {
    border-bottom: 1px solid #d3d1c5;
@@ -15,7 +15,7 @@
    text-align:left;
 }
 #visitsLive .country {
-   background:#FFFFFF url(../../../plugins/CoreHome/templates/images/bullet1.gif) no-repeat scroll 0 0;
+   background:#FFF url(../../../plugins/CoreHome/templates/images/bullet1.gif) no-repeat scroll 0 0;
 }
 #visitsLive .referer {
    background:#F9FAFA none repeat scroll 0 0;
@@ -28,7 +28,7 @@
     float:left;
 }
 #visitsLive .settings {
-   background:#FFFFFF none repeat scroll 0 0;
+   background:#FFF none repeat scroll 0 0;
 }
 #visitsLive .settings a{  
 	 text-decoration:none;
@@ -43,8 +43,7 @@
 	line-height:2.5em;
 }
 .visitorLog table img {
-	margin:0;
-	margin-right:3px;
+	margin:0 3px 0 0;
 }
 .visitsLiveFooter a.rightLink{
     float:right;
@@ -74,6 +73,8 @@ ol.visitorLog li {
 	border:1px solid #D8D8D8;
 	color:#474747;
 	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
     padding: 3px 5px;
 }
 #visitsLive .visitorRank {
@@ -82,14 +83,16 @@ ol.visitorLog li {
 	margin-left:5px;
 }
 .hash {
-    color: #BBBBBB;
+    color: #BBB;
     font-size: 9pt;
     margin-right:2px;
 }
 .repeat { 
     font-weight: bold; 
-    border: 1px solid #444444; 
+    border: 1px solid #444;
     border-radius: 3px 3px 3px 3px; 
-    padding: 2px; 
+    -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px 3px 3px 3px;
+    padding: 2px;
 }
 
