--- a/themes/default/simple_structure.css
+++ b/themes/default/simple_structure.css
@@ -38,7 +38,7 @@
 p, dt {
 	line-height: 120%;
 	padding-bottom: 1em;
-	margin:10;
+	margin:10px;
 }
 a { color: #006; }
 #logo { margin-bottom: 2em; }
@@ -74,10 +74,10 @@ a { color: #006; }
 	font-weight:bold;
 	font-size:130%;
 	border: 1px solid red;
-	padding:20;
+	padding:20px;
 }
 .error, .error a {
-	color:red;
+	color:#f00;
 }
 .error img, .success img, .warning img {
 	border:0;
