Refs #3011 #53 Small updates to english strings & ui
git-svn-id: http://dev.piwik.org/svn/trunk@6178 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -408,7 +408,7 @@ div.widgetpreview-preview {
     margin-bottom: 10px;
 }
 
-#setAsDefaultWidgetsConfirmHelp {
+.popoverSubMessage {
     text-align: center;
     padding: 10px 0 5px 0;
 }
