Refs #3011 minor strings updates
git-svn-id: http://dev.piwik.org/svn/trunk@6180 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -400,8 +400,8 @@ div.widgetpreview-preview {
 }
 
 #newDashboardNameInput, #createDashboardNameInput {
-    margin: 10px 0 0 0;
-    text-align: center;
+     margin: 20px 0 0 100px;
+    text-align: left;
 }
 
 #createDashboardNameInput input {
