--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -681,8 +681,8 @@ a.tableConfigurationIcon img {
 .tableConfiguration ul li {
     padding: 0;
     font-size: 1.1em;
-    height: 20px;
-    margin-top: -40px;
+    height: 40px;
+    margin-top: -80px;
     background-color: #fff;
     border-left: 1px solid #DFDFDF;
     border-right: 1px solid #DFDFDF;
@@ -697,10 +697,11 @@ a.tableConfigurationIcon img {
     -webkit-border-radius: 0 0 4px 4px;
 	height: 25px;
 	cursor: default;
+	margin-top: -40px;
 }
 
 .tableConfiguration ul li.first {
-	margin-top: -45px;
+	margin-top: -65px;
 }
 
 .tableConfiguration ul li.last {
@@ -710,14 +711,17 @@ a.tableConfigurationIcon img {
     -moz-border-radius: 4px 4px 0 0;
 }
 
-.tableConfiguration span {
-    display: block;
-	cursor: pointer;
-    padding: 0 10px;
-	height: 20px;
-	line-height: 20px;
+.tableConfiguration div.configItem {
+    cursor: pointer;
+    padding: 5px 10px;
+	line-height: 15px;
+	color: #444;
 }
 
-.tableConfiguration span:hover {
+.tableConfiguration div.configItem:hover {
     background-color: #EBEAE6;
+}
+
+.tableConfiguration div.configItem span.action {
+	color: #255792;
 }
