added/fixed several doc blocks; fixed some css
git-svn-id: http://dev.piwik.org/svn/trunk@6243 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -306,7 +306,7 @@ ul.widgetpreview-categorylist {
 ul.widgetpreview-categorylist li,
 ul.widgetpreview-widgetlist li {
     line-height:20px;
-    padding:0px 25px 0px 5px;
+    padding:0 25px 0 5px;
     border-radius:2px;
     -moz-border-radius:2px;
     -webkit-border-radius:2px;
