refs #3065 fixes UX regression
git-svn-id: http://dev.piwik.org/svn/trunk@6254 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -338,7 +338,7 @@ div.widgetpreview-preview {
     width: 500px;
 }
 
-#dashboardSettings.widgetpreview-base {
+#dashboardSettings {
     min-height: 0;
     height: auto;
     margin-left: 10px;
