optimized several css statements
git-svn-id: http://dev.piwik.org/svn/trunk@6272 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -146,9 +146,7 @@ table.dataTable td.columnodd {
 }
 
 table.dataTable td.labeleven {
-	background: #F9FAFA;
-	background-image: url(images/bullet2.gif);
-	background-repeat: no-repeat;
+	background: #F9FAFA url(images/bullet2.gif) no-repeat;
 }
 
 table.dataTable td.labelodd {
