Fixes #3137, added ability for data table views to link to arbitrary related reports in the data table footer.
git-svn-id: http://dev.piwik.org/svn/trunk@6309 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -305,6 +305,15 @@ table thead div {
 	cursor: pointer;
 }
 
+.datatableRelatedReports {
+	font-size: 13px;
+	color: #222;
+}
+
+.datatableRelatedReports span {
+	cursor: pointer;
+}
+
 /* are the following two supposed to be together? */
 .subDataTable.dataTableFeatures {
 	padding-top: 0;
