--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -153,6 +153,10 @@ table.dataTable td.labelodd {
 	background: #fff url(images/bullet1.gif) no-repeat;
 }
 
+.dataTable tr.highlight td {
+	background-color: #ECF9DD;
+	font-weight: bold;
+}
 
 table.dataTable td.label,table.subActionsDataTable td.label,table.actionsDataTable td.label {
 	border-top: 0;
