Refs #3137 Small style changes
git-svn-id: http://dev.piwik.org/svn/trunk@6332 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -310,12 +310,13 @@ table thead div {
 }
 
 .datatableRelatedReports {
-	font-size: 13px;
-	color: #222;
+	color: #555555;
+    font-size: 11px;
 }
 
 .datatableRelatedReports span {
 	cursor: pointer;
+	font-weight:bold;
 }
 
 /* are the following two supposed to be together? */
