Refs #1052  * CSS updates  * refactored since there is already a function doing this code ;)
git-svn-id: http://dev.piwik.org/svn/trunk@6335 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -567,6 +567,15 @@ h2 .reportDocumentationIcon.hidden {
 	background: none;
 }
 
+.helpDate {
+	color: #777777;
+    font-size: 11px;
+	font-style:italic;    
+    padding: 4px;
+    text-align: right;
+    display:block;
+}
+
 table.dataTable .dataTableRowActions {
 	position: absolute;
 	display: none;
