minor CSS / segment forward changes
git-svn-id: http://dev.piwik.org/svn/trunk@6363 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -538,7 +538,8 @@ table.dataTable th .columnDocumentationTitle {
 	padding: 0;
 	border-radius: 4px;
 	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px; 
+	-webkit-border-radius: 4px;
+	max-width: 500px; 
 }
 
 .reportDocumentation p {
