Fixes #2048 Added Do Not Track preference under Privacy screen. Now will update doc and FAQs!
git-svn-id: http://dev.piwik.org/svn/trunk@6376 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -638,7 +638,7 @@ select {
 table.entityTable tr td a {
 	text-decoration:underline;
 }
-.entityTable tr.highlight td {
+.entityTable tr.highlighted td {
 	background-color: #ECF9DD;
 }
 
