Build + text in Piwik not black
git-svn-id: http://dev.piwik.org/svn/trunk@6394 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -16,7 +16,7 @@ form {margin: 0; }
 body {
 	line-height: 1.33;
 	background-color: white;
-	color: black;
+	color: #333;
 }
 ol,ul {
 	list-style: none;
