Refs #3184, added ability to specify custom tooltips for datatable labels & modified Referers>Websites table to show full referer url as the tooltip. Also tweaked tooltip CSS style.
git-svn-id: http://dev.piwik.org/svn/trunk@6546 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -374,7 +374,8 @@ a {
 
 #tooltip h3 {
 	font-weight: normal;
-	font-size:1em;
+	font-size:.85em;
+	font-style: italic;
 	color:#162540;
 	margin:0;
 	padding:0;
@@ -382,8 +383,8 @@ a {
 #tooltip {
 	position: absolute;
 	z-index: 3000;
-	border: 1px solid #111;
-	padding:7px;
+	border: 1px solid #E4E2D7 /*#111*/;
+	padding:5px 7px 5px 7px;
 	background-color:#F5F7FF;
 	opacity:0.95;
 }
