CSS fixes (Update screen UI), simplify HTML code, and require date/period for Live API method to limit abuse
git-svn-id: http://dev.piwik.org/svn/trunk@6565 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -345,7 +345,7 @@ a {
 /*------------------------*/
 
 
-#javascriptDisable, #javascriptDisable a {
+#javascriptDisabled, #javascriptDisabled a {
 	font-weight: bold;
 	color: #F88D22;
 	padding:15px;
