--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -141,7 +141,7 @@ a {
 	display:none; 
 }
 
-#periodString .period-date{
+#periodString .period-date,#periodString .period-range{
 	float:left; 
 	padding:0 16px 0 0;
 }
@@ -517,10 +517,11 @@ div.ui-state-highlight {
 }
 .ui-datepicker td.ui-datepicker-week-end .ui-state-default{background:#f6f6f6!important;}
 
-.ui-datepicker td.ui-datepicker-current-period a.ui-state-default, td .ui-state-active, .ui-datepicker td.ui-datepicker-current-period a.ui-state-active, .ui-datepicker td.ui-datepicker-week-end .ui-state-active{
+.ui-datepicker td.ui-datepicker-current-period a.ui-state-default, td .ui-state-active, .ui-datepicker td.ui-datepicker-current-period a.ui-state-active, .ui-datepicker td.ui-datepicker-week-end .ui-state-active, .ui-datepicker td.ui-datepicker-other-month.ui-datepicker-current-period{
 	border-color:#887f71!important;
 	background:#887f71!important;
 	color:#fff!important;
+	opacity:1!important;
 }
 
 .ui-datepicker td .ui-state-hover, .ui-datepicker .ui-datepicker td.ui-datepicker-current-period a.ui-state-hover, .ui-datepicker td.ui-datepicker-week-end .ui-state-hover{ 
@@ -528,8 +529,26 @@ div.ui-state-highlight {
 	color:#000!important;
 }
 
-.ui-datepicker td.ui-datepicker-current-period .ui-state-default:hover, .ui-datepicker td.ui-datepicker-current-period .ui-state-hover:hover{ background:#978c7c!important;}
+.ui-datepicker td.ui-datepicker-current-period .ui-state-default.ui-state-hover, .ui-datepicker td.ui-datepicker-current-period .ui-state-hover:hover {
+	background:#978c7c!important;
+	border-color:#978c7c!important;
+}
 
+td.ui-datepicker-other-month.ui-state-hover {
+	background:#e5e3e0!important;
+	color:#000!important;
+	opacity:1!important;
+	border-style: none;
+}
+
+td.ui-datepicker-other-month.ui-state-hover.ui-datepicker-current-period{
+	background:#978c7c!important;
+}
+
+.ui-datepicker-month:disabled {
+	border-color:#ccc!important;
+	background:#f5f3f0!important;
+}
 
 .centerLargeDiv { 
 	width:850px; 
